--- a/movie/css/detail.css
+++ b/movie/css/detail.css
@@ -13,9 +13,33 @@
 /* .starring{
     display:flex;
 } */
-.actorimg{
-    width : 300px;
-    height : 400px;
-    position:relative;
+
+/* .starring, .recommendations, .trailer-container {
+    display:flex;
+    flex-wrap: wrap;    
+} */
+.actor{
+    display:flex;
+    flex-wrap: wrap;
+
 }
+.actors{
+    /* width : 700px;
+    height : 500px;
+    margin : 0px 0px 0px 0px; */
+    position: relative;
+    /* display: inline; */
+}
+
+.actorimg{
+    /* width : 300px; */
+    height : 400px;
+    width: 100%;
+    position: relative;
+    /* display: grid; */
+    
+    
+}
+
+
 
